fixed home page double scrolling for all different device sizes

--- a/src/Home.css
+++ b/src/Home.css
@@ -1,7 +1,7 @@
 /* General Home Container Styles */
 .home-container {
   position: relative;
-  height: 80vh;
+  height: auto;
   overflow-x: hidden; /* Avoid horizontal scrolling */
   overflow-y: auto; /* Enable vertical scrolling */
   display: flex;
@@ -125,7 +125,6 @@ body {
 
 @media (max-width: 768px) {
   .home-container {
-    height: 90vh;
     padding-top: 0px; /* Optional: Add some top padding for aesthetics */
     padding: 10px;
   }
